# algorithm_view

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: config.py
app/api/: main.py
app/api/dependencies/: auth_depends.py
app/core/: __init__.py
app/crypto/: __init__.py  crypto_service.py
app/crypto/algorithms/: base.py
app/db/: database.py
app/db/algorithm/: models.py
app/db/algorithm_parameter/: models.py
app/db/algorithms/: models.py
app/db/comparison/: models.py
app/db/edu_example/: models.py
app/db/example/: models.py
app/db/key/: models.py
app/db/users/: models.py
app/middlewares/: auth.py
app/repository/base/: base.py
app/repository/crypto/: algorithm_repository.py  base.py  example_repository.py  key_repository.py
app/repository/users/: user_repository.py
app/schemas/algorithms/: schemas.py
app/schemas/users/: schemas.py
docker_compose/: app.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/api/: aes.js  ecc.js  rsa.js
frontend/src/assets/: styles.css
frontend/src/components/: AESExplanationPanel.vue  AESIntroduction.vue  AESVisualizer.vue  ECCExplanationPanel.vue  ECCIntroduction.vue  ECCVisualizer.vue  RSAExplanationPanel.vue  RSAIntroduction.vue  RSAVisualizer.vue
migrations/: env.py
migrations/versions/: 2025_05_06_0324-d037607deefb_init_migration.py  2025_05_06_0335-57e383cd0121_init_migration.py  2025_05_19_0243-aa3399675666_init.py
(+33 files in other folders)
